--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,6 @@
 AUTH0_BASE_URL=$VERCEL_URL
 
 AUTH0_ISSUER_BASE_URL='https://dev-ys62hk65.us.auth0.com'
+AUTH0_BASE_URL=${VERCEL_GIT_REPO_SLUG}-${VERCEL_GIT_COMMIT_REF}-${VERCEL_GIT_REPO_OWNER}.vercel.app
+
+[ "$VERCEL_ENV" = production ] && AUTH0_BASE_URL="$VERCEL_URL" || AUTH0_BASE_URL="$VERCEL_GIT_REPO_SLUG-$VERCEL_GIT_COMMIT_REF-$VERCEL_GIT_REPO_OWNER.vercel.app" yarn build
