--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.6.1",
     "axios": "^0.24.0",
+    "lottie-web": "^5.8.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
